fix: removed overflow property from body

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -220,7 +220,6 @@ body {
     margin: auto;
     background: transparent;
     text-align: center;
-    overflow: hidden;
 }
 html {
     background: url('../bg.png');
